2005-03-08  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* src/SharpenHist/sharpen_hist.cc uses finite(), which is not
	available on many versions of Solaris.  Added a test to look for
	isfinite() as well as finite() in configure.in
	* src/EvaluateField/evaluateField.cc,
	src/SplineSmooth/splineSmooth.cc, src/VolumeHist/minchist.cc
	Get rid of redundant #define N_DIMENSIONS 3, which duplicates
	the definition in volume_io.h and generates a warning.	

2004-11-18  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* src/ExtractTag/extracttag.c - minor change to argTable[] to 
	reflect the fact that -mintags and -maxtags take 'long' arguments
	rather than 'int' arguments.  This was pointed out as a potential 
	issue on 64-bit platforms by Yasunari Tosa of MGH.
	
2004-11-17  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* nu_estimate_np_and_em.in - fixed CreateMask to work properly
	if the user-provided mask file winds up having the same name
	as the internally generated temporary mask file.  This should only
	happen when the user-specified file is compressed, or otherwise
	needs processing before it can be used.  This problem sometimes
	resulted in test case #14 failing.
	 
2004-03-26  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* volumeStats.cc - Use the standard DBL_MAX and float.h rather
	than the less standard MAXDOUBLE.

2004-03-16  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* configure.in - Update such that the tests for lapack and blas
	can work on Debian Linux (specifically audrey.bic.mni.mcgill.ca)
	
2004-02-05  Bert Vincent   <bert@bic.mni.mcgill.ca>
	
	* make_template.in - Apply edit suggested by John Sled which 
	avoids the "excessively large header" problem by using the entire
	output file as a template.
	
2004-01-29  Bert Vincent   <bert@bic.mni.mcgill.ca>
	
	* Makefile.am - turn on execute bits for scripts, uncomment SUBDIRS 
	so that the tests can be included.
	
	* testing/do_test.in - several minor fixes to deal with newer autoconf
	directory layout.
